@@ -57,6 +57,7 @@ Andrew Tridgell                     tridge@samba.org
 Andrey Borzenkov                    arvidjaar@mail.ru
 Andries Brouwer                     Andries.Brouwer@cwi.nl
 Andy Longton                        alongton@metamark.com
+Anoop Sharma                        sendtoanoop@gmail.com
 Anthony Thyssen                     anthony@griffith.edu.au
 Antonio Rendas                      ajrendas@yahoo.com
 Ariel Faigon                        ariel@cthulhu.engr.sgi.com
